--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
-  background-image: linear-gradient(to right, #04238D,#03176E);
+  background-image: linear-gradient(to right, rgb(0, 7, 28),rgb(23, 23, 23));
 }
 
 code {
